Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12890

Using the RCF Library crashes QtCreator drung parsig the source with out off memory (near 2GB).

XMLWordPrintable

      When using RCF http://www.deltavsoft.com/RCF.html the QtCreator starts parsing the sources and then crashes with memory near 2GB.

      Just add the include folder to the pro-file, inlcude RCF.hpp in main.cpp and add RCF.cpp (as documented) to the souces.

      After a few seconds parsing the source starts and after a while (check the memory of QtCreator in the TaskManager) QtCreator crashes with nearly 2GB memory consumption.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kosjar Nikolai Kosjar
            moellney Michael Möllney
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes